bk_ida/gccida/c3/emit_group_store
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2558:4: error: expected ';' after expression
rtx v42; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2558:5: error: use of undeclared identifier 'v42'
rtx v42; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2562:4: error: expected ';' after expression
rtx v46; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2562:5: error: use of undeclared identifier 'v46'
rtx v46; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2570:4: error: expected ';' after expression
rtx j; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2570:5: error: use of undeclared identifier 'j'
rtx j; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2574:4: error: expected ';' after expression
rtx dest; // [rsp+10h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2574:5: error: use of undeclared identifier 'dest'
rtx dest; // [rsp+10h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2575:6: error: use of undeclared identifier 'tmps'
rtx *tmps; // [rsp+18h] [rbp-68h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2576:4: error: expected ';' after expression
rtx v60; // [rsp+20h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2576:5: error: use of undeclared identifier 'v60'
rtx v60; // [rsp+20h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2577:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61[2]; // [rsp+28h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2579:4: error: expected ';' after expression
rtx dst; // [rsp+38h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2579:5: error: use of undeclared identifier 'dst'
rtx dst; // [rsp+38h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2581:4: error: expected ';' after expression
rtx y; // [rsp+48h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2581:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+48h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2585:1: error: use of undeclared identifier 'dst'
dst = orig_dst; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2593:13: error: expected expression
v7 = ( rtx *)( ( char *)&v56 - ( ( 8 * v6 + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/expr.c:2600:22: error: use of undeclared identifier 'machine_mode'
v10 = gen_reg_rtx( ( machine_mode)*( unsigned __int8 *)( v9 + 2)); 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_group_store/src/obj/expr.o] Error 1
